# tenkai

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  build.rs
.agents/skills/advance-issue-frontier/: SKILL.md
.agents/skills/assess-change-impact/: SKILL.md
.agents/skills/capture-project-decision/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  release.yml  security-audit.yml
docs/: catalog-contract.md  offline-bundles.md  operational-storage.md  plan-approval.md  provider-contracts.md  release-signing.md  runtime-protocol-v1.md
docs/decisions/: 0001-standalone-core-and-service-evolution.md  0002-tenkai-owned-routing-configuration.md  0003-canonical-offline-delivery-archives.md  README.md
docs/plans/: 00-plan-step-contract.md  01-executor-interface.md  02-public-api-compatibility.md  03-constraint-model.md  04-environment-facts.md  05-version-constraints.md  06-product-dependencies.md  07-dependency-planner.md  08-drift-detection.md  09-reconciler.md  10-maintenance-windows.md  11-release-signing.md  12-plan-approval-signing.md  13-pull-agent.md  14-intelligence-artifacts.md  15-canary-promotion.md  16-disconnected-bundles.md  17-fleet-rollout-waves.md  18-outcome-learning.md  README.md  ROADMAP.md
examples/hello-local/: tenkai.toml
examples/routing-local/: routing.json  tenkai.toml
examples/routing-local-v2/: routing.json  tenkai.toml
scripts/: capture-rollback-replay.sh
src/: apply.rs  canary.rs  catalog.rs  client.rs  constraint.rs  drift.rs  embedded.rs  executor.rs  lib.rs  maintenance.rs  manifest.rs  offline_bundle.rs  ontology.rs  pb.rs  plan.rs  plan_approval.rs  planner.rs  providers.rs  reconciler.rs  release_signing.rs  routing.rs  runtime_agent.rs  runtime_protocol.rs  server.rs  storage.rs
(+17 files in other folders)
