[package]
name = "tenkai"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "Local-first, constraint-based delivery control plane backed by sekai-chisei."

[[bin]]
name = "tenkaictl"
path = "src/bin/tenkaictl.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
anyhow = "1"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
