[package]
name = "tenkai"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "Local-first, constraint-based delivery control plane backed by sekai-chisei."

[[bin]]
name = "tenkaictl"
path = "src/bin/tenkaictl.rs"

[[bin]]
name = "tenkai-executor-guard"
path = "src/bin/tenkai-executor-guard.rs"

[dependencies]
tonic = { version = "0.14", features = ["tls-webpki-roots", "tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "signal", "io-util"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
semver = "1"
anyhow = "1"
libc = "0.2"
url = "2"
chrono = "0.4"
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
